--- a/index.html
+++ b/index.html
@@ -1,103 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Will You Be My Valentine? ❤️</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #ff758c, #ff7eb3);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: 'Poppins', sans-serif;
-    }
+<meta charset="UTF-8">
+<title>Will You Be My Valentine? ❤️</title>
 
-    .card {
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
-      text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-      width: 320px;
-    }
+<style>
+* {
+  box-sizing: border-box;
+}
 
-    h1 {
-      color: #ff4d6d;
-      margin-bottom: 30px;
-    }
+body {
+  margin: 0;
+  height: 100vh;
+  background: linear-gradient(135deg, #ff4d6d, #ff8fab);
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+}
 
-    .buttons {
-      position: relative;
-      height: 100px;
-    }
+/* Center Card */
+.card {
+  position: relative;
+  z-index: 2;
+  background: white;
+  padding: 40px;
+  border-radius: 25px;
+  text-align: center;
+  width: 340px;
+  box-shadow: 0 25px 60px rgba(0,0,0,0.25);
+  animation: pop 1s ease;
+}
 
-    button {
-      padding: 12px 25px;
-      font-size: 18px;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      position: absolute;
-    }
+@keyframes pop {
+  from { transform: scale(0.8); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
 
-    #yes {
-      background: #ff4d6d;
-      color: white;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+h1 {
+  color: #ff4d6d;
+  margin-bottom: 30px;
+}
 
-    #no {
-      background: #adb5bd;
-      color: white;
-      left: 50%;
-      top: 50px;
-      transform: translateX(-50%);
-    }
+/* Buttons */
+.buttons {
+  position: relative;
+  height: 120px;
+}
 
-    .message {
-      display: none;
-      margin-top: 20px;
-      font-size: 20px;
-      color: #ff4d6d;
-      font-weight: bold;
-    }
-  </style>
+button {
+  padding: 14px 30px;
+  font-size: 18px;
+  border-radius: 40px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+}
+
+#yes {
+  background: #ff4d6d;
+  color: white;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#no {
+  background: #adb5bd;
+  color: white;
+  top: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Success Screen */
+.success {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: radial-gradient(circle, #ff4d6d, #c9184a);
+  color: white;
+  z-index: 3;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  animation: fadeIn 1s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0 }
+  to { opacity: 1 }
+}
+
+.success h2 {
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+
+.success p {
+  font-size: 22px;
+}
+</style>
 </head>
+
 <body>
 
-  <div class="card">
-    <h1>Will you be my Valentine? 💘</h1>
+<!-- Floating Hearts -->
+<canvas id="hearts"></canvas>
 
-    <div class="buttons">
-      <button id="yes">Yes 💖</button>
-      <button id="no">No 🙄</button>
-    </div>
-
-    <div class="message" id="message">
-      Best decision of your life 😘<br>
-      I love you ❤️
-    </div>
+<div class="card">
+  <h1>Will you be my Valentine? 💘</h1>
+  <div class="buttons">
+    <button id="yes">Yes 💖</button>
+    <button id="no">No 🙄</button>
   </div>
+</div>
 
-  <script>
-    const noBtn = document.getElementById("no");
-    const yesBtn = document.getElementById("yes");
-    const msg = document.getElementById("message");
+<div class="success" id="success">
+  <h2>Best decision of your life 😘</h2>
+  <p>I love you ❤️</p>
+</div>
 
-    noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 80 - 40;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    });
+<!-- Romantic Music -->
+<audio id="music" loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+</audio>
 
-    yesBtn.addEventListener("click", () => {
-      msg.style.display = "block";
-      document.querySelector(".buttons").style.display = "none";
-    });
-  </script>
+<script>
+/* NO button movement (mouse + touch) */
+const noBtn = document.getElementById("no");
+noBtn.addEventListener("mouseover", moveNo);
+noBtn.addEventListener("touchstart", moveNo);
+
+function moveNo() {
+  const x = Math.random() * 240 - 120;
+  const y = Math.random() * 120 - 60;
+  noBtn.style.transform = `translate(${x}px, ${y}px)`;
+}
+
+/* YES button */
+document.getElementById("yes").addEventListener("click", () => {
+  document.querySelector(".card").style.display = "none";
+  document.getElementById("success").style.display = "flex";
+  document.getElementById("music").play();
+});
+
+/* Floating Hearts Canvas */
+const canvas = document.getElementById("hearts");
+const ctx = canvas.getContext("2d");
+
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+let hearts = [];
+
+function createHeart() {
+  hearts.push({
+    x: Math.random() * canvas.width,
+    y: canvas.height + 20,
+    size: Math.random() * 20 + 10,
+    speed: Math.random() * 2 + 1
+  });
+}
+
+function drawHearts() {
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle = "rgba(255,255,255,0.7)";
+  hearts.forEach((h, i) => {
+    ctx.beginPath();
+    ctx.arc(h.x, h.y, h.size/2, 0, Math.PI * 2);
+    ctx.fill();
+    h.y -= h.speed;
+    if (h.y < -20) hearts.splice(i,1);
+  });
+}
+
+setInterval(createHeart, 300);
+function animate() {
+  drawHearts();
+  requestAnimationFrame(animate);
+}
+animate();
+</script>
 
 </body>
 </html>
