--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 /* Center Card */
 .card {
   position: relative;
-  z-index: 2;
+  z-index: 10;
   background: white;
   padding: 40px;
   border-radius: 25px;
@@ -103,8 +103,20 @@ button {
 
 <body>
 
-<!-- Floating Hearts -->
-<canvas id="hearts"></canvas>
+  canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.card {
+  position: relative;
+  z-index: 10;
+}
 
 <div class="card">
   <h1>Will you be my Valentine? 💘</h1>
