--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ button {
 </div>
 
 <audio id="music" loop>
-  <source src="jo ishq hua1.mp3" type="audio/mp3">
+  <source src="jo%20ishq%20hua1.mp3" type="audio/mp3">
 </audio>
 
 <script>
