--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ button {
 <canvas id="hearts"></canvas>
 
 <div class="card" id="card">
-  <h1>Will you be my Valentine? 💘</h1>
+  <h1>Aanchal Sharma will you be my Valentine? 💘</h1>
   <div class="buttons">
     <button id="yes">Yes 💖</button>
     <button id="no">No 🙄</button>
@@ -117,7 +117,7 @@ button {
 </div>
 
 <audio id="music" loop>
-  <source src="jo%20ishq%20hua1.mp3" type="audio/mp3">
+  <source src="jo-ishq-hua.mp3" type="audio/mp3">
 </audio>
 
 <script>
